Fixed issue with padding on mobile; removed links

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -10,5 +10,5 @@ html, body {
     background-image: url(new_years.jpg);
     background-size: cover;
     background-position: 0 -15rem;
-    margin: 0 200px;
+    margin: 0 10rem;
 }
